tests/rosetta/out/C/bioinformatics-sequence-mutation.error
cc: exit status 1
/tmp/bioinformatics-sequence-mutation.c: In function ‘makeSeq’:
/tmp/bioinformatics-sequence-mutation.c:118:15: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  118 |     out = out + slice_string(bases, idx, idx + 1);
      |               ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                 |
      |                 char *
/tmp/bioinformatics-sequence-mutation.c:123:16: warning: assignment to ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
  123 |   tmp4.data[1] = out;
      |                ^
/tmp/bioinformatics-sequence-mutation.c: In function ‘mutate’:
/tmp/bioinformatics-sequence-mutation.c:151:33: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  151 |     printf("%s\n", "  Change @" + padLeft(tmp7, 3) + " '" + arr.data[p] +
      |                    ~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~
      |                    |              |
      |                    char *         char *
/tmp/bioinformatics-sequence-mutation.c:156:33: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  156 |     printf("%s\n", "  Delete @" + padLeft(tmp8, 3) + " '" + arr.data[p] + "'");
      |                    ~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~
      |                    |              |
      |                    char *         char *
/tmp/bioinformatics-sequence-mutation.c:179:33: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  179 |     printf("%s\n", "  Insert @" + padLeft(tmp12, 3) + " '" + b + "'");
      |                    ~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~
      |                    |              |
      |                    char *         char *
/tmp/bioinformatics-sequence-mutation.c:191:17: warning: assignment to ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
  191 |   tmp14.data[1] = out;
      |                 ^
/tmp/bioinformatics-sequence-mutation.c: In function ‘prettyPrint’:
/tmp/bioinformatics-sequence-mutation.c:206:38: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  206 |     printf("%s\n", padLeft(tmp15, 5) + ": " + tmp16);
      |                    ~~~~~~~~~~~~~~~~~ ^
      |                    |                 |
      |                    char *            char *
/tmp/bioinformatics-sequence-mutation.c:236:28: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  236 |   printf("%s\n", "    A: " + padLeft(tmp17, 3));
      |                  ~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~
      |                  |           |
      |                  char *      char *
/tmp/bioinformatics-sequence-mutation.c:238:28: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  238 |   printf("%s\n", "    C: " + padLeft(tmp18, 3));
      |                  ~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~
      |                  |           |
      |                  char *      char *
/tmp/bioinformatics-sequence-mutation.c:240:28: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  240 |   printf("%s\n", "    G: " + padLeft(tmp19, 3));
      |                  ~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~
      |                  |           |
      |                  char *      char *
/tmp/bioinformatics-sequence-mutation.c:242:28: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  242 |   printf("%s\n", "    T: " + padLeft(tmp20, 3));
      |                  ~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~
      |                  |           |
      |                  char *      char *
/tmp/bioinformatics-sequence-mutation.c: In function ‘mochi_main’:
/tmp/bioinformatics-sequence-mutation.c:267:15: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
  267 |   char *dna = (char *)(res.data[1]);
      |               ^
/tmp/bioinformatics-sequence-mutation.c:283:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
  283 |   printf("%d\n", wstring(tmp33));
      |           ~^     ~~~~~~~~~~~~~~
      |            |     |
      |            int   char *
      |           %s
/tmp/bioinformatics-sequence-mutation.c:296:11: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
  296 |     dna = (char *)(res.data[1]);
      |           ^
