tests/rosetta/out/C/bioinformatics-sequence-mutation.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:44Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:44Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
static list_string slice_list_string(list_string v, int start, int end) {
  if (start < 0)
    start += v.len;
  if (end < 0)
    end += v.len;
  if (start < 0)
    start = 0;
  if (end > v.len)
    end = v.len;
  if (start > end)
    start = end;
  list_string r = list_string_create(end - start);
  for (int i = 0; i < r.len; i++)
    r.data[i] = v.data[start + i];
  return r;
}
list_int randInt(int s, int n) {
  int next = (s * 1664525 + 1013904223) % 2147483647;
  list_int tmp1 = list_int_create(2);
  tmp1.data[0] = next;
  tmp1.data[1] = next % n;
  return tmp1;
}

char *padLeft(char *s, int w) {
  char *res = "";
  int n = w - strlen(s);
  while (n > 0) {
    char *tmp2 = concat_string(res, " ");
    res = tmp2;
    n = n - 1;
  }
  char *tmp3 = concat_string(res, s);
  return tmp3;
}

list_int makeSeq(int s, int le) {
  char *bases = "ACGT";
  char *out = "";
  int i = 0;
  while (i < le) {
    list_int r = randInt(s, 4);
    s = r.data[0];
    int idx = (int)(r.data[1]);
    out = out + slice_string(bases, idx, idx + 1);
    i = i + 1;
  }
  list_int tmp4 = list_int_create(2);
  tmp4.data[0] = s;
  tmp4.data[1] = out;
  return tmp4;
}

list_int mutate(int s, char *dna, list_int w) {
  char *bases = "ACGT";
  int le = strlen(dna);
  list_int r = randInt(s, le);
  s = r.data[0];
  int p = (int)(r.data[1]);
  r = randInt(s, 300);
  s = r.data[0];
  int x = (int)(r.data[1]);
  list_string arr = list_string_create(0);
  int i = 0;
  while (i < le) {
    list_string tmp5 = list_string_create(1);
    tmp5.data[0] = slice_string(dna, i, i + 1);
    list_string tmp6 = concat_list_string(arr, tmp5);
    arr = tmp6;
    i = i + 1;
  }
  if (x < w.data[0]) {
    r = randInt(s, 4);
    s = r.data[0];
    int idx = (int)(r.data[1]);
    char *b = slice_string(bases, idx, idx + 1);
    char *tmp7 = _str(p);
    printf("%s\n", "  Change @" + padLeft(tmp7, 3) + " '" + arr.data[p] +
                       "' to '" + b + "'");
    arr.data[p] = b;
  } else if (x < w.data[0] + w.data[1]) {
    char *tmp8 = _str(p);
    printf("%s\n", "  Delete @" + padLeft(tmp8, 3) + " '" + arr.data[p] + "'");
    int j = p;
    while (j < arr.len - 1) {
      arr.data[j] = arr.data[j + 1];
      j = j + 1;
    }
    list_string tmp9 = slice_list_string(arr, 0, arr.len - 1);
    arr = tmp9;
  } else {
    r = randInt(s, 4);
    s = r.data[0];
    int idx2 = (int)(r.data[1]);
    char *b = slice_string(bases, idx2, idx2 + 1);
    list_string tmp10 = list_string_create(1);
    tmp10.data[0] = "";
    list_string tmp11 = concat_list_string(arr, tmp10);
    arr = tmp11;
    int j = arr.len - 1;
    while (j > p) {
      arr.data[j] = arr.data[j - 1];
      j = j - 1;
    }
    char *tmp12 = _str(p);
    printf("%s\n", "  Insert @" + padLeft(tmp12, 3) + " '" + b + "'");
    arr.data[p] = b;
  }
  char *out = "";
  i = 0;
  while (i < arr.len) {
    char *tmp13 = concat_string(out, arr.data[i]);
    out = tmp13;
    i = i + 1;
  }
  list_int tmp14 = list_int_create(2);
  tmp14.data[0] = s;
  tmp14.data[1] = out;
  return tmp14;
}

int prettyPrint(char *dna, int rowLen) {
  printf("SEQUENCE:\n");
  int le = strlen(dna);
  int i = 0;
  while (i < le) {
    int k = i + rowLen;
    if (k > le) {
      k = le;
    }
    char *tmp15 = _str(i);
    char *tmp16 = slice_string(dna, i, k);
    printf("%s\n", padLeft(tmp15, 5) + ": " + tmp16);
    i = i + rowLen;
  }
  int a = 0;
  int c = 0;
  int g = 0;
  int t = 0;
  int idx = 0;
  while (idx < le) {
    char *ch = slice_string(dna, idx, idx + 1);
    if ((strcmp(ch, "A") == 0)) {
      a = a + 1;
    } else {
      if ((strcmp(ch, "C") == 0)) {
        c = c + 1;
      } else {
        if ((strcmp(ch, "G") == 0)) {
          g = g + 1;
        } else {
          if ((strcmp(ch, "T") == 0)) {
            t = t + 1;
          }
        }
      }
    }
    idx = idx + 1;
  }
  printf("\n");
  printf("BASE COUNT:\n");
  char *tmp17 = _str(a);
  printf("%s\n", "    A: " + padLeft(tmp17, 3));
  char *tmp18 = _str(c);
  printf("%s\n", "    C: " + padLeft(tmp18, 3));
  char *tmp19 = _str(g);
  printf("%s\n", "    G: " + padLeft(tmp19, 3));
  char *tmp20 = _str(t);
  printf("%s\n", "    T: " + padLeft(tmp20, 3));
  printf("    ------\n");
  char *tmp21 = _str(le);
  char *tmp22 = concat_string("    Σ: ", tmp21);
  printf("%s\n", tmp22);
  printf("    ======\n");
}

char *wstring(list_int w) {
  char *tmp23 = _str(w.data[0]);
  char *tmp24 = concat_string("  Change: ", tmp23);
  char *tmp25 = concat_string(tmp24, "\n  Delete: ");
  char *tmp26 = _str(w.data[1]);
  char *tmp27 = concat_string(tmp25, tmp26);
  char *tmp28 = concat_string(tmp27, "\n  Insert: ");
  char *tmp29 = _str(w.data[2]);
  char *tmp30 = concat_string(tmp28, tmp29);
  char *tmp31 = concat_string(tmp30, "\n");
  return tmp31;
}

int mochi_main() {
  int seed = 1;
  list_int res = makeSeq(seed, 250);
  seed = res.data[0];
  char *dna = (char *)(res.data[1]);
  prettyPrint(dna, 50);
  int muts = 10;
  list_int w = list_int_create(3);
  w.data[0] = 100;
  w.data[1] = 100;
  w.data[2] = 100;
  printf("\\nWEIGHTS (ex 300):\n");
  list_int tmp32 = list_int_create(3);
  tmp32.data[0] = 100;
  tmp32.data[1] = 100;
  tmp32.data[2] = 100;
  list_int tmp33 = list_int_create(3);
  tmp33.data[0] = 100;
  tmp33.data[1] = 100;
  tmp33.data[2] = 100;
  printf("%d\n", wstring(tmp33));
  char *tmp34 = _str(muts);
  char *tmp35 = concat_string("MUTATIONS (", tmp34);
  char *tmp36 = concat_string(tmp35, "):");
  printf("%s\n", tmp36);
  int i = 0;
  while (i < muts) {
    list_int tmp37 = list_int_create(3);
    tmp37.data[0] = 100;
    tmp37.data[1] = 100;
    tmp37.data[2] = 100;
    res = mutate(seed, dna, tmp37);
    seed = res.data[0];
    dna = (char *)(res.data[1]);
    i = i + 1;
  }
  printf("\n");
  prettyPrint(dna, 50);
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
